# inito

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  TASKS.md  concepts.html  dependency-injection.html  examples.html  faq.html  frameworks.html  genindex.html  index.html  installation.html  migration.html  mkdocs.yml  objects.inv  performance.html  pyproject.toml  quickstart.html  recipes.html  search.html  searchindex.js  security.html  sitemap.xml  troubleshooting.html  user-guide.html
.claude/: settings.json
.claude/agents/: convention-reviewer.md  di-designer.md  doc-writer.md  explorer.md  test-author.md
.claude/rules/: python.md
.claude/skills/di-feature/: SKILL.md
.claude/skills/gate/: SKILL.md
.claude/skills/release/: SKILL.md
.claude/skills/resume/: SKILL.md
.doctrees/: concepts.doctree  dependency-injection.doctree  environment.pickle  examples.doctree  faq.doctree  frameworks.doctree  index.doctree  installation.doctree  migration.doctree  performance.doctree  quickstart.doctree  recipes.doctree  security.doctree  troubleshooting.doctree  user-guide.doctree
.doctrees/decorators/: accessors.doctree  builder.doctree  config.doctree  constructors.doctree  data.doctree  equals-and-hash-code.doctree  jsonize.doctree  to-string.doctree  value.doctree
.doctrees/reference/: decorators.doctree  dependency-injection.doctree  exceptions.doctree  index.doctree
.github/workflows/: ci.yml  docs.yml  release.yml
_modules/: index.html
_modules/inito/builders/: builder_generator.html
_modules/inito/decorators/: all_args_constructor.html  config.html  data.html  equals_and_hash_code.html  getter.html  inject.html  jsonize.html  no_args_constructor.html  required_args_constructor.html  resource.html  service.html  setter.html  singleton.html  to_string.html  value.html
_modules/inito/di/: container.html  dependency_resolver.html  factory.html
_modules/inito/exceptions/: errors.html
_modules/inito/metadata/: field.html
_sources/: dependency-injection.md.txt  faq.md.txt  index.md.txt  installation.md.txt
_sources/decorators/: builder.md.txt  constructors.md.txt  data.md.txt
_sources/reference/: dependency-injection.md.txt  exceptions.md.txt  index.md.txt
benchmarks/: conftest.py  import_time.py  memory_profile.py  pyperf_suite.py  test_attribute_access_benchmark.py  test_builder_benchmark.py  test_construction_benchmark.py  test_data_benchmark.py  test_decoration_benchmark.py  test_di_benchmark.py  test_equality_benchmark.py  test_hash_benchmark.py  test_repr_benchmark.py
decorators/: accessors.html  builder.html  config.html  constructors.html  data.html  equals-and-hash-code.html  jsonize.html  to-string.html  value.html
dev/: README.md  decisions.md  history.md  roadmap.md
dev/plans/: di2-phase-1.md  di2-phase-2.md  di2-phase-3.md  di2-phase-4.md
dev/tasks/: framework-examples.md  phase-1-config-override-qualifiers.md  phase-2-factory.md  phase-3-resources.md  phase-4-scopes-async-fastapi.md  pyright-stubgen.md
docs/: api.md  concepts.md  conf.py  dependency-injection.md  examples.md  faq.md  frameworks.md  index.md  installation.md  migration.md  performance.md  quickstart.md  recipes.md  security.md  troubleshooting.md  user-guide.md
docs/decorators/: accessors.md  builder.md  config.md  constructors.md  data.md  equals-and-hash-code.md  index.md  jsonize.md  to-string.md  value.md
docs/reference/: decorators.md  dependency-injection.md  exceptions.md
examples/: all_args_constructor_basic.py  builder_basic.py  data_basic.py  di_basic.py  equals_and_hash_code_basic.py  getter_basic.py  no_args_constructor_basic.py  required_args_constructor_basic.py  setter_basic.py  to_string_basic.py  value_basic.py
examples/di/: README.md
examples/di/aiohttp/: README.md  app.py  test_app.py
examples/di/boto3/: README.md  services.py  test_services.py
examples/di/django/: README.md  app.py  test_app.py
examples/di/fastapi/: README.md  app.py  test_app.py
examples/di/rabbitmq/: README.md  services.py  test_services.py
examples/di/redis/: README.md  services.py  test_services.py
examples/di/sanic/: README.md  app.py  test_app.py
examples/di/settings/: README.md  app.py  test_settings.py
examples/di/valkey/: README.md  services.py  test_services.py
reference/: decorators.html  dependency-injection.html  exceptions.html  index.html
scripts/: check_all.sh
src/inito/: __init__.py
tests/: conftest.py  test_lazy_di_imports.py
tests/builders/: test_builder_generator.py
tests/core/: test_attach.py
tests/decorators/: test_all_args_constructor.py  test_builder.py  test_config.py  test_data.py  test_equals_and_hash_code.py  test_getter.py  test_inject.py  test_jsonize.py  test_no_args_constructor.py  test_required_args_constructor.py  test_service.py  test_setter.py  test_singleton.py  test_to_string.py  test_value.py
tests/di/: test_async_resolution.py  test_container.py  test_dependency_resolver.py  test_factory.py  test_fastapi_injected.py  test_overrides.py  test_qualifiers.py  test_resources.py  test_scopes.py
tests/exceptions/: test_errors.py
tests/generators/: test_accessors_generator.py  test_base.py  test_constructor_generator.py  test_equality_generator.py  test_no_args_constructor_generator.py  test_registry.py  test_repr_generator.py  test_required_args_constructor_generator.py
tests/integration/: test_composition.py  test_edge_cases.py  test_framework_interop.py  test_frozen.py  test_generics.py  test_invalid_usage.py  test_post_init.py  test_recipes_run.py  test_slots.py
tests/metadata/: test_class_metadata.py  test_extractor.py  test_field_metadata.py
tests/mypy_plugin/: conftest.py  test_accessors.py  test_builder.py  test_constructors.py  test_data.py  test_examples_regression.py  test_jsonize.py  test_value.py
tests/reflection/: test_introspection.py
tests/stubs/: test_augment.py  test_emit.py  test_generator_cli.py  test_pyright_end_to_end.py
tests/utils/: test_codegen.py  test_decorator_factory.py  test_json_encoding.py
(+67 files in other folders)
