[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inito"
dynamic = ["version"]
description = "A Lombok-inspired boilerplate-elimination library for Python."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Swetank Subham", email = "swetanksubham.r@gmail.com" }]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
    "Operating System :: OS Independent",
]
keywords = ["lombok", "boilerplate", "codegen", "dataclass", "builder"]
dependencies = []

[project.scripts]
inito-stubgen = "inito.stubs.cli:main"

[project.urls]
Homepage = "https://github.com/swtnk/inito"
Repository = "https://github.com/swtnk/inito"
Documentation = "https://swetanksubham.com/inito/"
Changelog = "https://github.com/swtnk/inito/blob/main/CHANGELOG.md"
Issues = "https://github.com/swtnk/inito/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "pytest-benchmark>=4",
    "ruff>=0.6",
    "mypy>=1.11,<2",
    "sphinx>=7",
    "pydata-sphinx-theme>=0.15",
    "sphinx-design>=0.6",
    "myst-parser>=3",
    "pre-commit>=3.7",
    "attrs>=23",
    "pyperf>=2.6",
    "typing-extensions>=4.6",
]
# Third-party frameworks used only to verify interoperability in
# tests/integration/test_framework_interop.py. Kept out of `dev` because no
# single version of every framework supports the whole 3.9-3.14 matrix; the
# interop tests are guarded with importorskip and run in a dedicated CI job on
# a stable interpreter. inito itself has zero runtime dependencies.
interop = [
    "pydantic>=2",
    "sqlalchemy>=2",
    "django>=4.2",
]
# Frameworks used only by the runnable examples under examples/di/ and their
# smoke tests. Example-only, never a runtime dependency; each example
# importorskips its framework and runs in a dedicated CI job.
examples = [
    "fastapi>=0.110",
    "httpx>=0.27",
    "redis>=5",
    "boto3>=1.34",
    "valkey>=6",
    "pika>=1.3",
    "aiohttp>=3.9",
    "sanic>=23",
    "sanic-testing>=23",
    "django>=4.2",
]
# The inito-stubgen tool uses mypy's stubgen for the base stub. Opt-in and
# dev-time only; inito's runtime stays zero-dependency.
stubgen = [
    "mypy>=1.11,<2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/inito"]

[tool.hatch.version]
path = "src/inito/__init__.py"
pattern = '__version__ = "(?P<version>[^"]+)"'

[tool.ruff]
target-version = "py39"
line-length = 100
src = ["src", "tests", "benchmarks"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C90", "SIM", "RUF", "ANN", "D"]
ignore = ["D203", "D212"]

[tool.ruff.lint.mccabe]
max-complexity = 14

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "D"]
"benchmarks/**" = ["ANN", "D"]
# Examples show framework idioms: FastAPI's `= Depends(...)` default (B008) and
# the pytest importorskip-then-import pattern (E402) are intentional here.
"examples/**" = ["ANN", "D", "B008", "E402"]
"docs/conf.py" = ["ANN", "D"]

[tool.ruff.format]
line-ending = "lf"

[tool.mypy]
python_version = "3.9"
strict = true
warn_unused_ignores = true
disallow_any_generics = true
disallow_untyped_defs = true
show_error_codes = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config --cov=inito --cov-report=term-missing --cov-fail-under=95"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/inito"]
branch = true

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "raise NotImplementedError"]
fail_under = 95
